==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed an issue that caused ``account_user``-column to be empty in the
   twitter tutorial plugin of the Admin UI.

 - Fixed an issue when using GRANT/REVOKE/DENY statements on a table with a
   custom schema set. The statements would result in permission changed on the
   default ``doc`` schema.

 - Fixed an issue with ``INNER`` and ``CROSS JOINS`` on more than 2 tables that
   could result in a ``Iterator is not on a row`` error.
